<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/peopleCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/zero"
        android:textSize="40sp" />

    <SeekBar
        android:id="@+id/peopleCountSeek"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:progress="50" />
    
    <TextView
        android:id="@+id/textAttendees"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.06"
        android:gravity="center_horizontal"
        android:text="@string/attendees"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />
    
	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
	    android:background="#333333"
	    android:orientation="vertical" >
        
	    <Button
	        android:id="@+id/btnAction"
	        android:layout_width="245dp"
	        android:layout_height="wrap_content"
	        android:layout_margin="20dp"
	        android:text="@string/start" />
	    
    </LinearLayout>
</LinearLayout>